CDDecGen: bidirectional navigable observer (#77)
* support for bidirectionally navigable observer